--- a/pagina-principal/estilos/style.css
+++ b/pagina-principal/estilos/style.css
@@ -28,20 +28,20 @@ header section#navegação{
     width: 100vw;
 }
 header section#navegação > h1{
-    font-size: 1.4em;
+    font-size: 1.9em;
     padding: 0px 0px 0px 10px;
     text-align: center;
     color: black;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 header section#navegação > nav{
-    padding-top: 10px;
+    padding-top: 30px;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
 }
 header section#navegação > nav > a{
-    font-size: .9em;
+    font-size: 1em;
     text-decoration: none;
     font-family: Georgia, 'Times New Roman', Times, serif;/* aqui modificaçao*/
     color: var(--cor05);
@@ -51,7 +51,7 @@ header section#navegação > nav > a{
 /*perfil 01*/
 main div#perfilImg{
     width: 100vw;
-    height: 200px;
+    height: 350px;
     background-image: url(../fotos/imagem-do-perfil.jpg);
     background-position: center center;
     background-repeat: no-repeat;
@@ -59,44 +59,32 @@ main div#perfilImg{
 }
 main section#perfilInfomações1 > h1 {
     color: var(--cor03);
-    text-align: left;
+    text-align: center;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.678);
-    font-size: 1.9em;
-    padding: 60px 0px 0px 20px;
+    font-size: 3.2em;
+    padding: 60px 0px 0px 10px;
 }
 main section#perfilInfomações1 > h2{
     font-size: .9em;
     color: var(--cor02);
-    text-align: left;
+    text-align: center;
     text-shadow: 1px 1px 1px black;
-    padding: 0px 0px 50px 70px;
+    padding: 0px 0px 40px 0px;
 }
-/*perfil 02*/
-main section#perfilInfomações1 > p {
-    display: inline-block;
-    padding-left: 0px;
-    width: 40vw;
-    height: 70px;
-    font-size: .8em;
+main section#perfilInfomações1 > p{
+    padding: 0px 20px 20px 25px;
     text-align: justify;
-    text-indent: 13px;
+    text-indent: 20px;
+    color: var(--cor01);
     text-shadow: 1px 1px 1px black;
-    color: white;
-
-    transform: translate(140%,-190% );
 }
+
 main section#perfilInfomações1 > nav#redesSocial {
     display: inline-flex;
-    text-align: center;
     align-items: center;
+    flex-direction: row;
 
-    transform: translate(-110%, -340%);
-    padding-left: 50px; 
-}
-
-main section#perfilInfomações1 > nav#redesSocial > nav{
-    padding-right: 0%;
-    display: inline;
+    padding: 20px 0px 0px 150px;
 }
 
 
