--- a/pagina-principal/estilos/media-query-principal.css
+++ b/pagina-principal/estilos/media-query-principal.css
@@ -1,1 +1,21 @@
 @charset "UTF-8";
+
+@media screen and (min-width: 360px ) and (max-width: 740px ) {
+    main section#perfilInfomações1 > nav#redesSocial {
+        display: inline-flex;
+        align-items: center;
+        flex-direction: row;
+    
+        padding: 60px 0px 0px 130px;
+    }
+}
+
+@media screen and (min-width: 412px ) and (max-width: 915px ) {
+    main section#perfilInfomações1 > nav#redesSocial {
+        display: inline-flex;
+        align-items: center;
+        flex-direction: row;
+    
+        padding: 60px 0px 0px 150px;
+    }
+}
