--- a/pagina-principal/estilos/style.css
+++ b/pagina-principal/estilos/style.css
@@ -25,8 +25,9 @@ body,html{
 
 /*topo da paginar*/
 header section#navegação{
+    border: solid 1px var(--cor06);
     padding: 25px 0px 5px 0px;
-    width: 100vw;
+    width: 99vw;
 }
 header section#navegação > h1{
     font-size: 1.9em;
@@ -62,8 +63,9 @@ header section#navegação > nav > a:hover{
 
 /*perfil 01*/
 main div#perfilImg{
-    width: 100vw;
-    height: 480px;
+    width: 99vw;
+    height: 700px;
+    border: solid 1px var(--cor06);
     background-image: url(../fotos/imagem-do-perfil.jpg);
     background-attachment: scroll;
     background-position: center center;
@@ -74,7 +76,7 @@ main section#perfilInfomações1 > h1 {
     color: var(--cor03);
     text-align: center;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.678);
-    font-size: 3.2em;
+    font-size: 3.7em;
     padding: 60px 0px 0px 10px;
 }
 main section#perfilInfomações1 > h2{
@@ -86,6 +88,7 @@ main section#perfilInfomações1 > h2{
 }
 main section#perfilInfomações1 > p{
     padding: 0px 20px 20px 25px;
+    font-size: 1.2em;
     text-align: justify;
     text-indent: 20px;
     color: var(--cor01);
@@ -97,7 +100,7 @@ main section#perfilInfomações1 > nav#redesSocial {
     align-items: center;
     flex-direction: row;
 
-    padding: 60px 0px 0px 110px;
+    padding: 20px 0px 0px 85px;
 }
 /*final do perfil 01*/
 
