--- a/pagina-principal/estilos/style.css
+++ b/pagina-principal/estilos/style.css
@@ -1,5 +1,11 @@
 @charset "UTF-8";
 
+
+  @import url('https://fonts.googleapis.com/css2?family=Alkatra&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Aboreto&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@500&display=swap');
+
+
 :root{
     --cor01: #D9C7A7;
     --cor02: #BFAC95;
@@ -8,9 +14,9 @@
     --cor05: #40352C;
     --cor06: #007d96;
 
-    --fonte01:s;
-    --fonte02:s;
-    --fonte03:s;
+    --fonte01:'Montserrat Alternates', sans-serif;
+    --fonte02:'Aboreto', cursive;
+    --fonte03:'Alkatra', cursive;
 }
 
 *{
@@ -20,7 +26,6 @@
 
 body,html{
     background-color: whitesmoke;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 /*topo da paginar*/
@@ -30,11 +35,11 @@ header section#navegação{
     width: 99.1vw;
 }
 header section#navegação > h1{
+    font-family: var(--fonte02);
     font-size: 1.9em;
     padding: 0px 0px 0px 10px;
     text-align: center;
     color: black;
-    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 header section#navegação > nav{
     padding-top: 30px;
@@ -48,6 +53,7 @@ header section#navegação > nav > a{
     text-decoration: none;
     font-family: Georgia, 'Times New Roman', Times, serif;/* aqui modificaçao*/
     color: var(--cor05);
+    font-family: var(--fonte01);
 
     transition: .8s;
 }
@@ -64,7 +70,7 @@ header section#navegação > nav > a:hover{
 /*perfil 01*/
 main div#perfilImg{
     width: 99.1vw;
-    height: 700px;
+    height: 830px;
     border: solid 2px var(--cor06);
     background-image: url(../fotos/imagem-do-perfil.jpg);
     background-attachment: scroll;
@@ -77,10 +83,12 @@ main section#perfilInfomações1 > h1 {
     text-align: center;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.678);
     font-size: 3.7em;
+    font-family: var(--fonte02);
     padding: 60px 0px 0px 10px;
 }
 main section#perfilInfomações1 > h2{
     font-size: .9em;
+    font-family: var(--fonte02);
     color: var(--cor02);
     text-align: center;
     text-shadow: 1px 1px 1px black;
@@ -89,8 +97,9 @@ main section#perfilInfomações1 > h2{
 main section#perfilInfomações1 > p{
     padding: 0px 20px 20px 25px;
     font-size: 1.2em;
+    font-family: var(--fonte03);
     text-align: justify;
-    text-indent: 20px;
+    text-indent: 40px;
     color: var(--cor01);
     text-shadow: 1px 1px 1px black;
 }
