--- a/pagina-principal/estilos/media-query-principal.css
+++ b/pagina-principal/estilos/media-query-principal.css
@@ -1,16 +1,16 @@
 @charset "UTF-8";
 
-@media screen and (min-width: 360px ) and (max-width: 658px ) {
+@media screen and (min-width: 320px ) and (max-width: 360px ) {
     main section#perfilInfomações1 > nav#redesSocial {
         display: inline-flex;
         align-items: center;
         flex-direction: row;
     
-        padding: 60px 0px 0px 130px;
+        padding: 60px 0px 0px 90px;
     }
     main div#perfilImg{
         width: 99.1vw;
-        height: 400px;
+        height: 650px;
         border: solid 2px var(--cor06);
         background-image: url(../fotos/imagem-do-perfil.jpg);
         background-attachment: scroll;
@@ -20,17 +20,36 @@
     }
 }
 
-@media screen and (min-width: 412px ) and (max-width: 915px ) {
+@media screen and (min-width: 360px ) and (max-width: 915px ) {
     main section#perfilInfomações1 > nav#redesSocial {
         display: inline-flex;
         align-items: center;
         flex-direction: row;
     
-        padding: 20px 0px 0px 130px;
+        padding: 20px 0px 0px 110px;
     }
     main div#perfilImg{
         width: 99.1vw;
-        height: 730px;
+        height: 600px;
+        border: solid 2px var(--cor06);
+        background-image: url(../fotos/imagem-do-perfil.jpg);
+        background-attachment: scroll;
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+}
+    @media screen and (min-width: 412px ) and (max-width: 915px ) {
+    main section#perfilInfomações1 > nav#redesSocial {
+        display: inline-flex;
+        align-items: center;
+        flex-direction: row;
+    
+        padding: 70px 0px 0px 130px;
+    }
+    main div#perfilImg{
+        width: 99.1vw;
+        height: 620px;
         border: solid 2px var(--cor06);
         background-image: url(../fotos/imagem-do-perfil.jpg);
         background-attachment: scroll;
