--- a/pagina-principal/estilos/style.css
+++ b/pagina-principal/estilos/style.css
@@ -141,16 +141,17 @@ main section#projetoPortfólio01 > h1{
     text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.685);
     font-size: 1.2em;
 
-    transform: translateY(864%);
+    transform: translateY(869%);
 }
 main section#projetoPortfólio01 > p{
     text-indent: 10px;
     background-color: rgba(0, 0, 0, 0.329);
+    border-radius: 0px 0px 10px 10px;
     font-family: var(--fonte03);
     color: var(--cor04);
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.747);
     font-size: .7em;
-    padding-left: 5px;
+    padding-left: 9px;
 
-    transform: translateY(500%);
+    transform: translateY(503%);
 }
