--- a/pagina-principal/estilos/style.css
+++ b/pagina-principal/estilos/style.css
@@ -148,14 +148,15 @@ main section#projetoPortfólio01 a > h1{
     background-color: rgba(0, 0, 0, 0.329);
     font-family: var(--fonte02);
     color: var(--cor03);
-    text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.685);
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.685);
     font-size: 1.2em;
+    border-radius: 0px 0px 10px 10px;
 
-    transform: translateY(867%);
+    transform: translateY(175%);
+
 }
-main section#projetoPortfólio01 a > p{
+main section#projetoPortfólio01  h1 >  p{
     text-indent: 10px;
-    background-color: rgba(0, 0, 0, 0.329);
     border-radius: 0px 0px 10px 10px;
     font-family: var(--fonte03);
     color: var(--cor04);
@@ -163,6 +164,5 @@ main section#projetoPortfólio01 a > p{
     font-size: .7em;
     padding-left: 9px;
 
-    transform: translateY(510%);
 }
 /*primeira section acima 01*/
