--- a/pagina-principal/estilos/style.css
+++ b/pagina-principal/estilos/style.css
@@ -41,6 +41,14 @@ header section#navegação > h1{
     text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.685);
     color: black;
 }
+header section#navegação > h2{
+    font-size: .8em;
+    font-family: var(--fonte02);
+    color: var(--cor02);
+    text-align: center;
+    text-shadow: 1px 1px 1px black;
+    padding: 0px 0px 10px 0px;
+}
 header section#navegação > nav{
     padding-top: 20px;
     display: flex;
