--- a/pagina-principal/estilos/style.css
+++ b/pagina-principal/estilos/style.css
@@ -52,15 +52,13 @@ header section#navegação > h2{
 header section#navegação > nav{
     padding-top: 20px;
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
     align-items: center;
+    justify-content: center;
 }
 header section#navegação > nav > a{
     font-size: .7em;
     text-decoration: none;
     text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.685);
-    font-family: Georgia, 'Times New Roman', Times, serif;/* aqui modificaçao*/
     color: var(--cor05);
     font-family: var(--fonte01);
 
@@ -79,6 +77,7 @@ header section#navegação > nav > a:hover{
 main div#perfilImg{
     width: 95vw;
     height: 500px;
+    box-shadow: 0px 3px 9px rgba(0, 0, 0, 0.562);
     background-image: url(../fotos/imagem-do-perfil.jpg);
     background-attachment: scroll;
     background-position: center center;
