--- a/pagina-principal/estilos/style.css
+++ b/pagina-principal/estilos/style.css
@@ -8,7 +8,7 @@
 
 :root{
     --cor01: #D9C7A7;
-    --cor02: #BFAC95;
+    --cor02: #c0b2a1;
     --cor03: #1b3338;
     --cor04: #8C8072;
     --cor05: #40352C;
@@ -155,7 +155,7 @@ main section#projetoPortfólio01 a > h1{
     text-indent: 11px;
     background-color: rgba(0, 0, 0, 0.329);
     font-family: var(--fonte02);
-    color: var(--cor03);
+    color: var(--cor02);
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.685);
     font-size: 1.2em;
     border-radius: 0px 0px 10px 10px;
@@ -197,7 +197,7 @@ main section#projetoPortfólio02 a > h1{
     text-indent: 11px;
     background-color: rgba(0, 0, 0, 0.329);
     font-family: var(--fonte02);
-    color: var(--cor03);
+    color: var(--cor02);
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.685);
     font-size: 1.2em;
     border-radius: 0px 0px 10px 10px;
