--- a/pagina-principal/estilos/style.css
+++ b/pagina-principal/estilos/style.css
@@ -213,5 +213,5 @@ main section#projetoPortfólio02  h1 >  p{
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.747);
     font-size: .7em;
     padding-left: 9px;
-
 }
+/*final segunda section acima 02*/
