--- a/pagina-principal/estilos/style.css
+++ b/pagina-principal/estilos/style.css
@@ -173,7 +173,7 @@ main section#projetoPortfólio01  h1 >  p{
     padding-left: 9px;
 
 }
-/*primeira section acima 01*/
+/* final da primeira section acima 01*/
 
 /*segunda section abaixo 02*/
 
