--- a/pagina-principal/estilos/media-query-principal.css
+++ b/pagina-principal/estilos/media-query-principal.css
@@ -1,2 +1,20 @@
-@charset "UTF-8";
+@charset "UTF-8"; /*medidas inicialdo site 320px tela s9+*/
 
+@media screen and (min-width: 365px) and (max-width: 762px ) {
+    header > h1 {
+        font-size: 2.6em;
+    }
+    header div#menu{
+        transform: translate(720% ,70%);
+        font-size: 3em;
+    }
+    main section#perfil > h2 {
+        font-size: 2.2em;
+    }
+    main section div#img01{
+        margin-left: 3em;
+    }
+    main section#perfil02{
+        transform: translate(114%, -261%);
+    }
+}
