--- a/pagina-principal/estilos/style.css
+++ b/pagina-principal/estilos/style.css
@@ -100,7 +100,7 @@ main section#perfil > h1{
 }
 main section#perfil > h2{
     color: var(--cor4);
-    font-family: var(--font2);
+    font-family: var(--font3);
     font-weight: bold;
     font-size: 1.8em;
     padding: 0px 0px 6px 20px;
@@ -128,6 +128,7 @@ main section div#img01{
     background-size: 7em;
     margin-left: 8px;
     margin-top: 1.7em;
+    margin-bottom: 0%;
     height: 250px;
     width: 250px;
 }
@@ -138,12 +139,12 @@ main section#perfil02{
     flex-direction: column;
     align-items: flex-start;
 
-    transform: translate(74%, -261%);
+    transform: translate(84%, -261%);
 }
 
 main section#perfil02 > h1 {
     color: var(--cor5);
-    font-family: var(--font2);
+    font-family: var(--font3);
     font-size: 1em;
 }
 main section#perfil02 > h1 > strong#Scor1 {
@@ -154,7 +155,27 @@ main section#perfil02 > h1 > strong#Scor2 {
 }
 main section#perfil02 > ul > p {
     color: var(--cor5);
-    font-family: var(--font3);
+    font-family: var(--font1);
     font-size: .6em;
     padding-top: 7px;
+}
+/*final do perfil01*/
+
+/*main oficial aqui a baixo*/
+main div#tecnologias {
+    transform: translateY(-100%);
+}
+main div#tecnologias > h1 {
+    position: relative;
+    color: var(--cor5);
+    font-family: var(--font3);
+    text-align: center;
+}
+main div#tecnologias > h1 > strong{
+    color: #d43131;
+}
+main div#tecnologias > p {
+    text-align: center;
+    color: #d43131;
+    padding-bottom: 30px;
 }
