--- a/pagina-principal/estilos/style.css
+++ b/pagina-principal/estilos/style.css
@@ -84,8 +84,7 @@ header div#navegação > nav > a{
     transition: 1s;
 }
 header div#navegação > nav > a:hover{
-    background-color: rgba(192, 186, 186, 0.849);
-    text-decoration: underline overline;
+    color: white;
 }
 /*topo da paginar acimar*/
 
