resolução do problema da tela

--- a/pagina-principal/estilos/media-query-principal.css
+++ b/pagina-principal/estilos/media-query-principal.css
@@ -141,6 +141,7 @@
         transform: translate( 67%, -91%);
     }
     main section#perfil02 > ul > p#textJS{
+        display: block;
         width: 600px;
     }
     main section#perfil02 > h1 {
