--- a/pagina-principal/estilos/style.css
+++ b/pagina-principal/estilos/style.css
@@ -102,10 +102,10 @@ a{
     left: 0;
 
     width: 100%;
-    height: 0vh;
+    height: 0%;
 
     visibility: hidden; /*ativar depois*/
-    transition: 1s;
+    transition: 0.6s;
 
 }
 
@@ -113,7 +113,7 @@ a{
     color: #ffffff7c;
     text-decoration: none;
     display: block;
-    padding: 20px 40px;
+    padding: 40px 40px;
     font-size: 1.4rem;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center;
@@ -147,7 +147,7 @@ a{
 
     .menu-mobile.abrir{
         visibility: visible;
-        height: calc(100vh - 80px);
+        height: calc(100% - 80px);
     }
 
     #btn-menu{
@@ -166,6 +166,7 @@ a{
 
 
 #btn-menu{
+    margin-right: 10px;
     width: 50px;
     height: 50px;
     border-radius: 10px;
