--- a/pagina-principal/estilos/style.css
+++ b/pagina-principal/estilos/style.css
@@ -104,7 +104,7 @@ a{
     width: 100%;
     height: 0%;
 
-    visibility: hidden; /*ativar depois*/
+    visibility: hidden; 
     transition: 0.6s;
     overflow: hidden;
 
@@ -219,7 +219,7 @@ main .container-main{
     background-position: center;
     max-width: 100vw;
     height: 570px;
-    box-shadow: 1px 0px 10px rgba(0, 0, 0, 0.322) inset;
+    box-shadow: 1px 0px 10px rgba(0, 0, 0, 0.356) inset;
 }
 
 /*main 01section*/
