--- a/pagina-principal/estilos/media_query_desktop.css
+++ b/pagina-principal/estilos/media_query_desktop.css
@@ -7,4 +7,8 @@
     header > div.container > button {
         display: none;
     }
+
+    .nav-list-about > ul {
+        margin-bottom: 90px;
+    }
 }
